--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,31 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.App {
+  text-align: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+table{
+  margin-left:auto;
+  margin-right:auto;
+}
+#input-container{
+border-style: solid;
+border-color: gray;
+padding-block: 1em;
+}
+
+#list-container{
+  align-items: center;
+  border-style: solid ;
+  border-top: transparent;
+  border-left: transparent;
+  border-right: transparent;
+  border-width: 2px;
+  border-color: lightgrey;
+}
+
+h1{
+  background-color: black;
+  color: white;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  margin-top: 0;
 }
